samples/unannotated-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: enforce-annotations
  labels:
    app: hello-app
spec:
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      annotations:
        "k8s.questionable.services/id": "abc"
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
