samples/public-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: LoadBalancer
  selector:
    app: hello-app
  ports:
    - port: 8000 # Service's port
      protocol: TCP
      targetPort: 8080
