samples/deny-public-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: deny-public-lbs
webhooks:
  - name: deny-public-services.questionable.services
    sideEffects: None
    rules:
      # This is an intentionally broad webhook configuration that is designed to
      # capture subresources as well, in order to correctly validate all possible
      # matches
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - "services"
          - "ingresses"
    failurePolicy: Fail
    clientConfig:
      service:
        name: admission-control-service
        namespace: default
        path: "/admission-control/deny-public-load-balancers"
      # This should be the CA certificate from your Kubernetes cluster
      # Use the below to generate the certificate in a valid format:
      # $ kubectl config view --raw --minify --flatten \
      #   -o jsonpath='{.clusters[].cluster.certificate-authority-data}'
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQVB3S1JwRkJZdlZEQlJpRXVUNExrcDh3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa05qUXhNMk14T0RndE9UUTVOUzAwT0dJNUxUZzRNVGt0WXpKaFpUTXlPREkzTkRjeQpNQjRYRFRFNU1EWXlNekl3TXpBek9Gb1hEVEkwTURZeU1USXhNekF6T0Zvd0x6RXRNQ3NHQTFVRUF4TWtOalF4Ck0yTXhPRGd0T1RRNU5TMDBPR0k1TFRnNE1Ua3RZekpoWlRNeU9ESTNORGN5TUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdTdCa1JlM1VRWjNkaWQzaEl3a3ZmaXJNTUVNcCs3eEw4Uytrc3RkVgpVZEwrY0NQb01 [...]
      # You can alternatively supply a URL to the service, as long as its reachable by the cluster.
      # url: ""
