samples/enforce-pod-annotations-example.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: enforce-pod-annotations
webhooks:
  - name: enforce-pod-annotations.questionable.services
    sideEffects: None
    # "Equivalent" provides insurance against API version upgrades/changes - e.g.
    # extensions/v1beta1 Ingress -> networking.k8s.io/v1beta1 Ingress
    # matchPolicy: Equivalent
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - "pods"
          - "deployments"
    namespaceSelector:
      matchExpressions:
        - key: "enforce-annotations"
          operator: In
          values: ["true"]
    failurePolicy: Fail
    clientConfig:
      service:
        # This is the hostname our certificate needs in its Subject Alternative
        # Name array - name.namespace.svc
        # If the certificate does NOT have this name, TLS validation will fail.
        name: admission-control-service
        namespace: default
        path: "/admission-control/enforce-pod-annotations"
      # This should be the CA certificate from your Kubernetes cluster
      # Use the below to generate the certificate in a valid format:
      # $ kubectl config view --raw --minify --flatten \
      #   -o jsonpath='{.clusters[].cluster.certificate-authority-data}'
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURERENDQWZTZ0F3SUJBZ0lSQVB3S1JwRkJZdlZEQlJpRXVUNExrcDh3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa05qUXhNMk14T0RndE9UUTVOUzAwT0dJNUxUZzRNVGt0WXpKaFpUTXlPREkzTkRjeQpNQjRYRFRFNU1EWXlNekl3TXpBek9Gb1hEVEkwTURZeU1USXhNekF6T0Zvd0x6RXRNQ3NHQTFVRUF4TWtOalF4Ck0yTXhPRGd0T1RRNU5TMDBPR0k1TFRnNE1Ua3RZekpoWlRNeU9ESTNORGN5TUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdTdCa1JlM1VRWjNkaWQzaEl3a3ZmaXJNTUVNcCs3eEw4Uytrc3RkVgpVZEwrY0NQb01 [...]
      # You can alternatively supply a URL to the service, as long as its reachable by the cluster.
      # url: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: enforce-annotations-example
  labels:
    enforce-annotations: "true"
